--- a/siduction-btrfs-0.1.1/debian/control
+++ b/siduction-btrfs-0.1.1/debian/control
@@ -1,10 +1,10 @@
 Source: siduction-btrfs
 Section: utils
 Priority: optional
-Maintainer: Axel Konrad <emma-konrad@web.de>
+Maintainer: Axel Konrad <ak-li@siduction.org>
 Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.6.2
-Homepage: https://github.com/siduction/grub-btrfs-rollback_settings
+Homepage: https://github.com/siduction/siduction-btrfs
 Rules-Requires-Root: no
 #Vcs-Git: https://salsa.debian.org/debian/siduction-btrfs.git
 #Vcs-Browser: https://salsa.debian.org/debian/siduction-btrfs
